--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.25)
 project(strategic_game_tests)
+include(ctest)
 
 add_executable(strategic_game_tests
         testMain.cpp
@@ -7,6 +8,8 @@ add_executable(strategic_game_tests
         ../app/utils/Range.cpp
         ../app/Map.cpp
         ../app/units/WarUnit.cpp
+        ../app/units/BaseUnit.cpp
         unitTests.cpp)
 target_compile_options(strategic_game_tests PUBLIC -Werror -Wall -Wextra -Wpedantic)
 target_link_libraries(strategic_game_tests PRIVATE CppUTest)
+add_test(NAME strategic_game_tests COMMAND strategic_game_tests)
